samples/_failures_safe/1761596507_d1aa7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a112970.c: In function ‘main’:
./samples/SAFE/__tmp_8a112970.c:132: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_8a112970.c:131:33: note: to match this ‘(’
  131 |                 cols1 = read_int("Enter columns for first matrix: ", 1, MAX_DIM
      |                                 ^
./samples/SAFE/__tmp_8a112970.c:131:17: error: expected declaration or statement at end of input
  131 |                 cols1 = read_int("Enter columns for first matrix: ", 1, MAX_DIM
      |                 ^~~~~
./samples/SAFE/__tmp_8a112970.c:131:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a112970.c:131:17: error: expected declaration or statement at end of input
